--- a/package.json
+++ b/package.json
@@ -1,27 +1,38 @@
 {
-  "name": "interview_client",
-  "version": "0.1.0",
+  "name": "ai-interview-platform",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.4.6"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "next": "15.4.6",
+    "gsap": "^3.12.5",
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.344.0",
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.2.1",
+    "react-intersection-observer": "^9.8.0",
+    "react-countup": "^6.5.0",
+    "next-themes": "^0.3.0",
+    "class-variance-authority": "^0.7.0",
+    "sonner": "^1.4.0"
   },
   "devDependencies": {
     "typescript": "^5",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
     "eslint": "^9",
-    "eslint-config-next": "15.4.6",
-    "@eslint/eslintrc": "^3"
+    "eslint-config-next": "15.4.6"
   }
 }
