--- a/package.json
+++ b/package.json
@@ -10,29 +10,36 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "next": "15.4.6",
-    "gsap": "^3.12.5",
-    "framer-motion": "^11.0.0",
-    "lucide-react": "^0.344.0",
-    "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.1",
-    "react-intersection-observer": "^9.8.0",
-    "react-countup": "^6.5.0",
-    "next-themes": "^0.3.0",
+    "@reduxjs/toolkit": "^2.9.0",
+    "@tanstack/react-query": "^5.87.1",
+    "@tanstack/react-query-devtools": "^5.87.1",
+    "@types/js-cookie": "^3.0.6",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.0",
-    "sonner": "^1.4.0"
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.0",
+    "gsap": "^3.12.5",
+    "js-cookie": "^3.0.5",
+    "lucide-react": "^0.344.0",
+    "next": "15.4.6",
+    "next-themes": "^0.3.0",
+    "react": "^18.2.0",
+    "react-countup": "^6.5.0",
+    "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.8.0",
+    "react-redux": "^9.2.0",
+    "sonner": "^1.4.0",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "tailwindcss": "^3.4.0",
     "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.35",
     "eslint": "^9",
-    "eslint-config-next": "15.4.6"
+    "eslint-config-next": "15.4.6",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5"
   }
 }
