--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.8.0",
     "react-redux": "^9.2.0",
+    "react-speech-recognition": "^4.0.1",
+    "regenerator-runtime": "^0.14.1",
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1"
   },
